Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.150 2004-03-15 21:27:27 mose Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.9 
<http://tikiwiki.org/ReleaseProcess19>
* [MOD] Parse absolute URI correctly in group home page setting
* [NEW] plugin ATTACH to list attachements on a wiki page
* [MOD] Avoid sending user back to registration page on first login 


Version 1.8.1 - Polaris-
<http://tikiwiki.org/ReleaseProcess181>
* [FIX] File and Image Galleries: Directory value shouldn't need "/"
* [MOD] Wiki Forum Discuss Broken with dropdown on Wiki Admin page 
* [FIX] Forums : Show posts by age sorting broken
* [FIX] Wiki Split! (both the @@@ and the line breaks in columns)
* [FIX] forum attachment doesn't work
* [FIX] Taglines uploaded display with escapes
* [FIX] Shoutbox module's delete link doesn't work everywhere
* [FIX] WikiSyntax : Center- if colon in-line, centering breaks
* [FIX] search_box with Fulltext Search
* [FIX] Misspelled link in file /lib/calendarlib.php
* [FIX] Incorrectly specified wiki 'h4' heading
* [FIX] Blog Pagination links were out of sync
* [FIX] moreneat debug console has hard to see colours
* [FIX] Forums : individual RSS feeds not working
* [FIX] RSS not properly processing blogId
* [FIX] FANCYTABLE plugin generates wrong TD format
* [FIX] RSS feeds are sent with Wiki Formatting instead of HTML