@@ -1,6 +1,6 @@
 <?php
 
-// $Header: /cvsroot/tikiwiki/tiki/tiki-admin_include_wiki.php,v 1.14 2004-03-08 03:20:31 mose Exp $
+// $Header: /cvsroot/tikiwiki/tiki/tiki-admin_include_wiki.php,v 1.15 2004-03-25 06:19:08 dabright Exp $
 
 // Copyright (c) 2002-2003, Luis Argerich, Garland Foster, Eduardo Polidor, et. al.
 // All Rights Reserved. See copyright.txt for details and a complete list of authors.
@@ -293,6 +293,16 @@ if (isset($_REQUEST["wikifeatures"])) {
 		$tikilib->set_preference("feature_wiki_plurals",'n');
 		
 		$smarty->assign("feature_wiki_plurals",'n');
+	}
+
+	if(isset($_REQUEST["feature_wiki_paragraph_formatting"]) && $_REQUEST["feature_wiki_paragraph_formatting"]=="on") {
+		$tikilib->set_preference("feature_wiki_paragraph_formatting",'y');
+		
+		$smarty->assign("feature_wiki_paragraph_formatting",'y');
+	} else {
+		$tikilib->set_preference("feature_wiki_paragraph_formatting",'n');
+		
+		$smarty->assign("feature_wiki_paragraph_formatting",'n');
 	}
 
 	$tikilib->set_preference('wiki_cache', $_REQUEST["wiki_cache"]);
